2008-01-18  Tim Taubert <twenty-three@users.berlios.de> 

	* Analog/Adapter.cs: print correct error message

2008-01-18  Tim Taubert <twenty-three@users.berlios.de> 

	* Analog/Adapter.cs: check for errors when opening adapter

2007-12-27  Tim Taubert <twenty-three@users.berlios.de> 

	* Analog/Control.cs: namespace corrected

2007-12-27  Tim Taubert <twenty-three@users.berlios.de> 

	* Analog/Kernel/v4l2_operation.cs, Analog/Adapter.cs, Analog/Control.cs,
	  Core/IOControl.cs: added control support
	* Analog/Video/VideoFormat.cs: property sizeimage added
	* Analog/Buffer.cs: documentation updated

2007-12-18  Tim Taubert <twenty-three@users.berlios.de> 

	* Analog/Kernel/v4l2_format.cs, Analog/Video/SlicedVBIFormat.cs: problems
	  with MarshalAs and arrays

2007-12-17  Tim Taubert <twenty-three@users.berlios.de> 

	* Analog/Kernel/v4l2_vbi_format.cs: missing fields added

2007-12-17  Tim Taubert <twenty-three@users.berlios.de> 

	* Analog/Kernel/v4l2_format.cs, Analog/Video/SlicedVBIFormat.cs,
	  Analog/Video/SlicedVBIOutputFormat.cs,
	  Analog/Video/SlicedVBICaptureFormat.cs: sliced vbi capture/output format
	  settings added

2007-12-17  Tim Taubert <twenty-three@users.berlios.de> 

	* Analog/Kernel/v4l2_format.cs, Analog/Video/VBICaptureFormat.cs,
	  Analog/Video/VBIFormat.cs, Analog/Video/VBIOutputFormat.cs: vbi
	  capture/output format settings added

2007-12-17  Tim Taubert <twenty-three@users.berlios.de> 

	* Analog/Video/Rectangle.cs: public constructor missing

2007-12-17  Tim Taubert <twenty-three@users.berlios.de> 

	* Analog/Video/OverlayOutputFormat.cs, Analog/Video/OverlayCaptureFormat.cs,
	  Analog/Video/OverlayFormat.cs: video overlay support added
	* Analog/Video/VideoFormat.cs, Analog/Video/BaseFormat.cs,
	  Analog/Video/VideoCaptureFormat.cs: refactored constructor inheritance

=== Release 0.3 ===

2007-12-17  Tim Taubert <twenty-three@users.berlios.de> 

	* ChangeLog, Core/AssemblyInfo.cs: release 0.3 prepared
