@@ -1,3 +1,7 @@
+2008-01-21  Tim Taubert <twenty-three@users.berlios.de> 
+
+	* Core/IOControl.cs: documentation added, formatting corrected
+
 2008-01-18  Tim Taubert <twenty-three@users.berlios.de> 
 
 	* Analog/Adapter.cs: print correct error message
